# ai-kyc-dna-synthesis-frontiers

./: .env.example  .gitattributes  .gitignore  CLAUDE.md  FRONTIERS_SUBMISSION_PLAN.md  LICENSE  Makefile  README.md  compute_paper_metrics.py  generate_figure1.py  generate_figure1b.py  generate_figure1c.py  generate_figure3.py  generate_figure6.py  generate_figure7.py  hello.py  paper_replacements.py  pyproject.toml  refine_metrics.py  requirements.txt  table2_complete.py
data/: blind_gradings.json  full-dataset.csv  ground_truth_flags.json  responses.csv  token-pricing.yaml  token_pricing.yaml
final-submission/: README.md  manuscript_gdoc.md  supplementary_gdoc.md
latency/: benchmark_latency.py  benchmark_results.csv  benchmark_results_full.csv  benchmark_results_full_stats.json  benchmark_results_stats.json  test_latency.py
notes/: 2026-06-05-biorxiv-submission-bundle.md  2026-06-05-reference-audit-corrections.md
paper/: CLAUDE.md  FrontiersinHarvard.cls  appendix_figures.md  check_emails.py  compute_values.py  correct_email_count.py  final_email_count.py  get_web_costs.py  main.tex  paper_draft.md  references.bib  supplementary.tex  update_summary.md  verify_updates.py
plots/: flag_accuracy_comparison.py  generate_all_plots.py  plot_advanced_analysis.py  plot_cost_latency.py  plot_country_analysis.py  plot_model_comparison.py  plot_pass_rates.py  plot_sources.py  style.py
processed/: responses.csv  tests.csv
prompts/: simple.txt
scripts/: analyze_data.py  build_latexdiff.sh  compute_paper_metrics.py  compute_statistical_power.py  compute_tables.py  (+14 more)
(+200 files in other folders)
