[project]
name = "ai-kyc-results"
version = "0.1.0"
description = "Evaluating AI-Assisted Customer Verification for DNA Synthesis Screening"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "matplotlib>=3.10.8",
    "numpy>=2.4.1",
    "pandas>=2.3.3",
    "pyyaml>=6.0",
    "scikit-learn>=1.8.0",
    "scipy>=1.15.0",
    "seaborn>=0.13.2",
]
